[project]
name = "comfyui-x-rework"
description = "A Extention that reworks some parts and adds new Nodes."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Blonicx/ComfyUI-X-Rework"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "blonicx"
DisplayName = "ComfyUI-X-Rework"
Icon = ""
