[project]
name = "comfyui-x-rework"
description = "A Extention that reworks some parts and adds new Nodes."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Blonicx/ComfyUI-X-Rework"

[tool.comfy]
PublisherId = "blonicx"
DisplayName = "ComfyUI-X-Rework"
Icon = "./assets/Logo.png"