[project]
name = "comfyui-x-rework"
description = "This is a plugin for ComfyUI that adds new Util Nodes and makes Lora training in ComfyUI abel. Except that it adds a new Features for Images."
version = "1.4.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Blonicx/ComfyUI-X-Rework"

[tool.comfy]
PublisherId = "blonicx"
DisplayName = "ComfyUI-X-Rework"
Icon = "./assets/img/Logo.png"